tooling/nargo_cli/tests/snapshots/compile_failure/unspecified_generic/execute__tests__stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Type annotation needed
  ┌─ src/main.nr:4:5
  │
4 │     foo();
  │     --- Could not determine the type of the generic argument `T` declared on the function `foo`
  │

Aborting due to 1 previous error
