tooling/nargo_cli/tests/snapshots/compile_failure/unspecified_generic/execute__tests__unspecified_generic_output.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: "&format!(\"success: {:?}\\nexit_code: {}\\n----- stdout -----\\n{}\\n----- stderr -----\\n{}\",\noutput.status.success(), output.status.code().unwrap_or(!0), stdout, stderr)"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
error: Type annotation needed
  ┌─ src/main.nr:4:5
  │
4 │     foo();
  │     --- Could not determine the type of the generic argument `T` declared on the function `foo`
  │

Aborting due to 1 previous error
